crates/parser/src/snapshots/parser__tests__parse_inline_err@0066_generalize_over_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "generalize-over a\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0066_generalize_over_no_body.ath
---
GENERALIZE_OVER_DED
  GENERALIZE_OVER_KW "generalize-over"
  WHITESPACE " "
  IDENT_EXPR
    IDENTIFIER
      IDENT "a"
  WHITESPACE "\n"
error 17: expected body for generalize over

