crates/parser/src/snapshots/parser__tests__parse_inline_err@0070_pick_witness_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-witness a for b\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0070_pick_witness_no_body.ath
---
PICK_WITNESS_DED
  PICK_WITNESS_KW "pick-witness"
  WHITESPACE " "
  IDENTIFIER
    IDENT "a"
  WHITESPACE " "
  FOR_KW "for"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "b"
  WHITESPACE "\n"
error 20: expected body for pick witness

