crates/parser/src/snapshots/parser__tests__parse_inline_err@0073_pick_witnesses_no_body.ath.snap
---
source: crates/parser/src/tests.rs
description: "pick-witnesses a for a\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0073_pick_witnesses_no_body.ath
---
PICK_WITNESSES_DED
  PICK_WITNESSES_KW "pick-witnesses"
  WHITESPACE " "
  NAME
    IDENT "a"
  WHITESPACE " "
  FOR_KW "for"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      NAME_REF
        IDENT "a"
  WHITESPACE "\n"
error 22: expected body for pick witnesses

