crates/parser/src/snapshots/parser__tests__parse_inline_err@0074_induct_no_phrase.ath.snap
---
source: crates/parser/src/tests.rs
description: "by-induction { a => (!claim a) }\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0074_induct_no_phrase.ath
---
INDUCT_DED
  BY_INDUCTION_KW "by-induction"
  WHITESPACE " "
  DED_PHRASE
    L_CURLY "{"
    WHITESPACE " "
    IDENT_EXPR
      IDENTIFIER
        IDENT "a"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "a"
      R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 16: expected `from` or `by` or `on`
error 16: expected at least one inference
error 16: expected deduction
error 16: expected L_CURLY
error 17: failed to parse restricted pattern

