crates/parser/src/snapshots/parser__tests__parse_inline_err@0076_restricted_named_pat_no_ident.ath.snap
---
source: crates/parser/src/tests.rs
description: "by-induction a { ( as bar) => (!claim bar) }\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0076_restricted_named_pat_no_ident.ath
---
INDUCT_DED
  BY_INDUCTION_KW "by-induction"
  WHITESPACE " "
  EXPR_PHRASE
    IDENT_EXPR
      IDENTIFIER
        IDENT "a"
  WHITESPACE " "
  L_CURLY "{"
  WHITESPACE " "
  RESTRICTED_MATCH_DED
    RESTRICTED_NAMED_PAT
      L_PAREN "("
      WHITESPACE " "
      AS_KW "as"
      WHITESPACE " "
      IDENT_PAT
        IDENTIFIER
          IDENT "bar"
      R_PAREN ")"
    WHITESPACE " "
    FAT_ARROW "=>"
    WHITESPACE " "
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "claim"
      WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "bar"
      R_PAREN ")"
  WHITESPACE " "
  R_CURLY "}"
  WHITESPACE "\n"
error 18: expected identifier in restricted named pattern

